<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.dasherz.dapenti.PentiDetailActivity" >

    <item
        android:id="@+id/share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_menu_share_holo_dark"
        android:showAsAction="ifRoom"
        android:title="@string/share" android:orderInCategory="1"/>
    <item
        android:id="@+id/more_menu"
        android:icon="@drawable/ic_more_vert_white"
        android:showAsAction="ifRoom"
        android:title="@string/more" android:orderInCategory="2">
        <menu>
            <item
                android:id="@+id/add_favourite"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/add_favourite"/>
            <item
                android:id="@+id/copy_title"
                android:orderInCategory="200"
                android:showAsAction="never"
                android:title="@string/copy_title"/>
            <item
                android:id="@+id/open_in_browser"
                android:orderInCategory="300"
                android:showAsAction="never"
                android:title="@string/open_in_browser"/>
            <item
                android:id="@+id/open_original_content"
                android:orderInCategory="400"
                android:showAsAction="never"
                android:title="@string/original_content"/>
        </menu>
    </item>

</menu>